[gd_scene load_steps=16 format=3 uid="uid://dcsn06k5woifq"]

[ext_resource type="Script" uid="uid://gbt4mm2ghxhl" path="res://scenes/follower/follower.gd" id="1_jmfn7"]
[ext_resource type="Texture2D" uid="uid://mscp3ld2ynnc" path="res://assets/kenney_1-bit-pack/Tilesheet/colored-transparent_packed.png" id="1_klxf7"]
[ext_resource type="PackedScene" uid="uid://c0oriyclogl46" path="res://scenes/ui/bar.tscn" id="3_8j6l1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jmfn7"]
radius = 204.07721

[sub_resource type="CircleShape2D" id="CircleShape2D_8j6l1"]
radius = 0.1

[sub_resource type="CircleShape2D" id="CircleShape2D_3g3wk"]
radius = 1.6298006

[sub_resource type="Animation" id="Animation_56twi"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2),
"points": PackedFloat32Array(0, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_gpyn0"]
resource_name = "walk"
length = 0.46667004
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 2),
"points": PackedFloat32Array(-8.5, -0.20095214, -30.142822, 0.1, 1.7233777, 4.318307, -0.06666666, -7.655207, 0.033333346, -4.48969, -7.9862537, -0.099999994, -0.98922443, 0, 0),
"times": PackedFloat32Array(0, 0.23333333, 0.46666667)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 1, 2),
"points": PackedFloat32Array(0, 0, 0, 0.016666668, -3.2500002, -12.828402, -0.054033026, 2.3520534, 0.045945406, -2, 0.02646184, 0, 0, 0, 0, 0.521074, -0.03333333, -28.786423, 0, 0),
"times": PackedFloat32Array(0, 0.1, 0.23333333, 0.46666667)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2, 2),
"points": PackedFloat32Array(-0.34660664, -0.2, 0, 0.06666667, -0.25215748, 0.40896666, -0.07777778, 0, 0.07777778, 0, -0.36877543, -0.13333333, -0.02430445, 0, 0),
"times": PackedFloat32Array(0, 0.23333333, 0.46666667)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_odk4b"]
_data = {
&"RESET": SubResource("Animation_56twi"),
&"walk": SubResource("Animation_gpyn0")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gpyn0"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_56twi"]
animation = &"walk"
play_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_odk4b"]
xfade_time = 0.5
advance_mode = 2
advance_expression = "is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x6um6"]
xfade_time = 0.5
advance_mode = 2
advance_expression = "!is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gpyn0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_bcchq"]
states/RESET/node = SubResource("AnimationNodeAnimation_gpyn0")
states/RESET/position = Vector2(304.8, 54.8)
states/Start/position = Vector2(64.8, 28.8)
states/walk/node = SubResource("AnimationNodeAnimation_56twi")
states/walk/position = Vector2(524, 69.2)
transitions = ["RESET", "walk", SubResource("AnimationNodeStateMachineTransition_odk4b"), "walk", "RESET", SubResource("AnimationNodeStateMachineTransition_x6um6"), "Start", "RESET", SubResource("AnimationNodeStateMachineTransition_gpyn0")]

[node name="Follower" type="CharacterBody2D" node_paths=PackedStringArray("label")]
collision_layer = 4
collision_mask = 17
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_jmfn7")
playerDistance = 50.0
BASESPEED = 230
label = NodePath("Label")
wanderDistance = 500.0
health = 10.0

[node name="viewRadius" type="Area2D" parent="."]
position = Vector2(-0.25, -0.25)
scale = Vector2(0.18648437, 0.17880563)
collision_layer = 0
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="viewRadius"]
position = Vector2(1.340595, -4.194499)
shape = SubResource("CircleShape2D_jmfn7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_klxf7")
region_enabled = true
region_rect = Rect2(432, 112, 16, 16)

[node name="heldItem" type="Node2D" parent="Sprite2D"]
position = Vector2(1.7148998, -4.7831287)
rotation = 0.11716485
scale = Vector2(0.5, 0.5)

[node name="Sprite" type="Sprite2D" parent="Sprite2D/heldItem"]
texture_filter = 1
position = Vector2(0, -12.06)
texture = ExtResource("1_klxf7")
region_enabled = true
region_rect = Rect2(512, 160, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
texture_filter = 1
position = Vector2(-0.5, 0)
shape = SubResource("CircleShape2D_8j6l1")

[node name="WanderTimer" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 30.0
avoidance_enabled = true
max_speed = 500.0
debug_enabled = true

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 10.0
offset_right = 20.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "0/0"
horizontal_alignment = 1

[node name="Enemy detection box" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy detection box"]
position = Vector2(-0.5, 0.5)
scale = Vector2(4, 4)
shape = SubResource("CircleShape2D_3g3wk")

[node name="Bar" parent="." instance=ExtResource("3_8j6l1")]
position = Vector2(0, -50)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_odk4b")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_bcchq")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")

[connection signal="timeout" from="WanderTimer" to="." method="on_timeout"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
